syntax = "proto3";

package usercenter;
option go_package = "/proto";


message UserInfo {
    string userId = 1;
    string userName = 2;
    string userEmail = 3;
    string userSecret = 4;
    int64 createdAt = 5;
    string about = 6;
}

message GetUserBySecretReq {
    string secret = 1;
}

message GetUserBySecretReply {
    int32 code = 1;
    string message = 2;
    UserInfo userInfo = 3;
}

message AddUserReq {
    string userName = 1;
    string password = 2;
    string email = 3;
    string about = 4;
}

message AddUserReply {
    int32 code = 1;
    string message = 2;
    UserInfo userInfo = 3;
}

message GetUserInfoReq{
    string userName = 1;
    string password = 2;
}

message GetUserInfoReply{
    int32 code = 1;
    string message = 2;
    UserInfo userInfo = 3;
}

message AuthorizeReq {
    string username = 1;
    string password = 2;
}

message AuthorizeReplyBody {
    string userId = 1;
    string token = 2;
    int64 expiredIn = 3;
}
message AuthorizeReply {
   int32 code = 1;
   string message = 2;
   AuthorizeReplyBody data = 3;
}

message GetUserByTokenReq {
    string token = 1;
}

message GetUserByTokenReply {
    int32 code = 1;
    string message = 2;
    UserInfo data = 3;
}

service UserService {
    rpc GetUserBySecret(GetUserBySecretReq) returns (GetUserBySecretReply){}
    rpc AddUser(AddUserReq) returns (AddUserReply){}
    rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoReply) {}
    rpc Authorize(AuthorizeReq) returns (AuthorizeReply) {}
    rpc GetUserByToken(GetUserByTokenReq)returns (GetUserByTokenReply) {}
}
